# StealthGate

./: .cursorignore  .cursorrules  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile
.cursor/: mcp.http.example.json  mcp.json
.cursor/rules/: stealthgate.md
.github/workflows/: ci.yml
configs/: config.back.toml  config.front.toml  config.toml
deploy/: install.sh  stealth-gate.service  uninstall.sh
docs/: CURSOR.md  DEPLOY.md  MCP.md  ROADMAP.md  SPLIT.md  WEBUI.md
examples/: webhook_receiver.rs
scripts/: gen-cert.sh
src/: acceptor.rs  admin.rs  antireplay.rs  backend_pool.rs  config.rs  dd_protocol.rs  detector.rs  domain_fronting.rs  drs.rs  error.rs  fallback.rs  fragmentation.rs  io_util.rs  lib.rs  limits.rs  metrics.rs  network.rs  proxy.rs  split.rs  state.rs  system_ops.rs  tls.rs  tls_server.rs  users.rs  webhooks.rs
src/admin/: handlers.rs  mod.rs
src/mcp/: mod.rs  service.rs
src/web/: api.rs  mod.rs  server.rs  session.rs
tests/: admin_tls.rs  domain_fronting.rs  integration.rs  mcp_http.rs  service_uninstall.rs  split.rs  tls_handshake.rs  unit.rs  webhooks.rs  webui.rs
web/: index.html
web/dashboard/: app.js  dashboard.html  login.html  style.css  users.html
