[package]
name = "stealth-gate"
version = "0.5.0"
edition = "2021"
description = "Fake TLS MTProto-прокси на Rust"
license = "MIT"
readme = "README.md"

[[bin]]
name = "stealth-gate"
path = "src/bin/stealth-gate.rs"

[[bin]]
name = "stealth-gate-mcp"
path = "src/bin/stealth-gate-mcp.rs"

[[example]]
name = "webhook-receiver"
path = "examples/webhook_receiver.rs"

[lib]
name = "stealth_gate"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
sha2 = "0.10"
rmcp = { version = "0.16", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
schemars = "1"
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
tower-sessions = { version = "0.14", features = ["signed"] }
argon2 = "0.5"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["rt"] }
rand = "0.8"
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio-test = "0.4"
rcgen = "0.14"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
